--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sriracha&display=swap');
+
+
+*,::before,::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root{
+  --bg : rgb(173, 216, 230);
+  --black : rgb(0,0,0);
+  --white : rgb(255, 255, 255);
+  --title : rgb(250, 0, 0);
+  --button : rgb(0,0,255);
+  --shadow: rgb(128, 128, 128);
+}
+
+body{
+  background-color: var(--bg);
+  font-family: 'Poppins', sans-serif;
+}
+
 .App {
+  margin: 3rem;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  font-family: 'Sriracha', cursive;
+  margin: 2rem;
+  font-size: 30px;
+  font-weight: bolder;
+  color: var(--black);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+  text-decoration: underline;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.image{
+  padding: 1rem;
+  background-color: var(--white);
+  width: 50rem;
+  height: auto;
+}
+
+.tour{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 50rem;
+  margin: 20px 220px 3rem 220px;
+  box-shadow: 5px 10px 18px var(--shadow);
 }
 
-.App-link {
-  color: #61dafb;
+.description{
+  font-family: 'Poppins', sans-serif;
+  padding: 1rem 2rem 1.2rem 2rem;
+  background-color: var(--white);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4{
+  padding-top: 5px;
+}
+
+.info{
+  margin-bottom: 10px;
+  width: 45rem;
+  font-weight: bolder;
+  display: flex;
+  justify-content: space-between;
+}
+
+.price{
+  width: auto;
+  padding: 2px 7px;
+  color: var(--button);
+  background-color: var(--bg);
+  border-radius: 5px;
+}
+
+p{
+  text-align: left;
+}
+
+.delete-btn{
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  background-color: var(--button);
+  color: var(--white);
+  width: auto;
+  border: 0;
+  border-radius: 5px;
+  padding: 7px;
+  margin: 1rem 0 0 10px;
+  box-shadow: 3px 3px 3px rgb(128, 128, 128);
+}
+
+.delete-btn:active{
+  box-shadow: 0 var(--white);
+  transform: translate(3px,3px);
 }
