--- a/src/App.css
+++ b/src/App.css
@@ -22,22 +22,27 @@ body{
 }
 
 .App {
-  margin: 3rem;
   align-items: center;
   font-family: 'Poppins', sans-serif;
   text-align: center;
 }
 
 .title{
-background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  width: 100%;
+  height: auto;
+  position: fixed;
+  background-color: none;
+  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
   font-family: 'Sriracha', cursive;
-  margin: 2rem;
   font-size: 30px;
   font-weight: bolder;
+  text-align: center;
   color: var(--black);
 }
 
 h2{
+  text-align: center;
+  padding: 4.5rem 0 0 1rem;
   text-decoration: underline;
 }
 
@@ -52,11 +57,12 @@ h2{
   display: flex;
   flex-direction: column;
   width: 50rem;
-  margin: 20px 220px 3rem 220px;
+  margin: 20px auto 3rem 270px;
   box-shadow: 5px 10px 18px var(--shadow);
 }
 
 .description{
+  height: auto;
   font-family: 'Poppins', sans-serif;
   padding: 1rem 2rem 1.2rem 2rem;
   background-color: var(--white);
@@ -86,7 +92,7 @@ p{
   text-align: left;
 }
 
-.delete-btn{
+.btn{
   font-family: 'Poppins', sans-serif;
   font-size: 15px;
   background-color: var(--button);
@@ -95,11 +101,31 @@ p{
   border: 0;
   border-radius: 5px;
   padding: 7px;
-  margin: 1rem 0 0 10px;
   box-shadow: 3px 3px 3px rgb(128, 128, 128);
 }
 
-.delete-btn:active{
+.readMore{
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  background-color: var(--white);
+  border: none;
+  color: var(--button);
+  margin-left: 5px;
+}
+
+.delete{
+  margin: 1rem 0 0 10px;
+}
+
+.btn:active{
   box-shadow: 0 var(--white);
   transform: translate(3px,3px);
+}
+
+.refresh{
+  width: auto;
+  height: auto;
+  font-size: 16px;
+  padding: 8px;
+  margin: 5rem 50%;
 }
